2010-02-23  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.23

	* lib/Makefile.am: Add pidfile.c, pidfile.h
	* lib/pidfile.c: New.
	* lib/pidfile.h: New.
	* rpc.yppasswdd/yppasswdd.c: Use create_pidfile().
	* rpc.ypxfrd/ypxfrd.c: Likewise.
	* ypserv/ypserv.c: Likewise.
	Patch from Karel Klic <kklic@redhat.com>.

2010-01-27  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.22

	* ypserv/ypserv.8.xml: Code cleanup, document problems with SIGHUP.

	* ypserv/server.c (ypproc_xfr_2_svc): Remove wrong ypdb_close
	call. Reported by Karel Klic <kklic@redhat.com>.

2009-06-12  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.21

2009-05-19  Thorsten Kukuk  <kukuk@suse.de>

	* ypserv/ypserv.c (main): Free transp (fix memory leak)

2009-05-12  Thorsten Kukuk  <kukuk@suse.de>

	* yphelper/yphelper.8.xml: New.
	* yphelper/yphelper.8: Regenerated from xml source.
	* yphelper/Makefile.am: Add rules for xml.

2009-05-07  Thorsten Kukuk  <kukuk@suse.de>

	* lib/access.c (is_valid): Don't print message for non-existing
	maps.

	* mknetid/mknetid.c (main): Check for NULL pointers before
	calling insert_user().
	Reported by Mark Brown <broonie@sirena.org.uk>

	* mknetid/netid_hash.c: Remove second xstrtok implementation.

	* mknetid/mknetid.h: Add xstrtok prototype.

2009-04-15  Thorsten Kukuk  <kukuk@suse.de>

	* ypserv/ypserv.c (ypprog_2): If decoding fails, try
	to free the already allocated memory.

2009-04-02  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.20

	* ypserv/ypserv.8.xml: New file.
	* ypserv/ypserv.8: Regenerated from xml source.
	* ypserv/Makefile.am: Add rules for xml.

	* ypxfr/ypxfr.8.xml: New file.
	* ypxfr/ypxfr.8: Regenerated from xml source.
	* ypxfr/Makefile.am: Add rules for xml.

	* yppush/yppush.8.xml: New file.
	* yppush/yppush.8: Regenerated from xml source.
	* yppush/Makefile.am: Add rules for xml.

	* lib/yp_db.c: Add some sanity checks.

	* rpc.ypxfrd/ypxfrd_server.c (ypxfrd_getmap_1_svc): Fix debug message.
